# SPDX-FileCopyrightText: 2026 Alberto P
#
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miescat"
version = "0.2.1"
description = "Mie scattering calculation based on MIEV0"
readme = "README.md"
requires-python = ">=3.9"
license = "MPL-2.0"
authors = [
    { name = "Alberto P" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["Mie", "scattering"]
dependencies = [
    "numpy"
]

[project.scripts]
mieleg = "miescat.cli:main"
